--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,4 +14,4 @@ jobs:
         uses: cypress-io/github-action@v5
         with:
           build: npm install
-          start: npm start
+          start: npm run
